--- a/sources/webcore/var/www/html/canopsis/themes/canopsis/resources/css/icons.css
+++ b/sources/webcore/var/www/html/canopsis/themes/canopsis/resources/css/icons.css
@@ -1,12 +1,26 @@
+.icon {
+	display: block;
+	width: 16px;
+	height: 16px;
+}
+
 .icon-user { 
-    background-image: url(../images/user.png) !important; 
+    background-image: url(../images/icons/user.png) !important; 
 } 
  
 .icon-add { 
-    background-image: url(../images/add.png) !important; 
+    background-image: url(../images/icons/add.png) !important; 
 } 
  
 .icon-delete { 
-    background-image: url(../images/delete.png) !important; 
+    background-image: url(../images/icons/delete.png) !important; 
+}
+
+.icon-config { 
+    background-image: url(../images/icons/delete.png) !important; 
+}
+
+.icon-crecord_type-account { 
+    background-image: url(../images/icons/account.png) !important; 
 }
 
