--- a/sources/webcore/var/www/canopsis/themes/canopsis/theme.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/theme.css
@@ -1,6 +1,7 @@
 /* Include all CSS */
 
 @import "resources/css/icons.css"; 
+@import "resources/css/row_background.css"; 
 @import "resources/css/ext-all.css"; 
 /* @import "resources/css/main-menu_panel.css"; */
 @import "resources/css/header-footer.css";
