--- a/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/row_background.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/row_background.css
@@ -1,5 +1,5 @@
 .row-background-ok { 
-    background-color: Chartreuse !important; 
+    background-color: GreenYellow  !important; 
 } 
 
 .row-background-warning { 
