--- a/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
@@ -66,12 +66,12 @@
 /*  state_type  */
 
 .icon-state-type-0 { 
-    background-image: url(../images/icons/false.png) !important;
+    background-image: url(../images/icons/tag_orange.png) !important;
     background-position:center; 
 }
 
 .icon-state-type-1 { 
-    background-image: url(../images/icons/true.png) !important;
+    background-image: url(../images/icons/tag_green.png) !important;
     background-position:center; 
 }
 
