--- a/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
@@ -33,7 +33,7 @@
 }
 
 .icon-perfdata { 
-    background-image: url(../images/icons/stats.png) !important; 
+    background-image: url(../images/states/perfdata.png) !important; 
 }
 
 .icon-bullet-orange { 
