cgrid : added icons

--- a/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
@@ -36,6 +36,10 @@
     background-image: url(../images/icons/save.png) !important; 
 }
 
+.icon-copy {
+	background-image: url(../images/icons/copy.png) !important;
+}
+
 .icon-perfdata { 
     background-image: url(../images/states/perfdata.png) !important; 
 }
