--- a/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/login.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/login.css
@@ -6,7 +6,7 @@
 	left: 0px;
 	top: 0px;
 
-	background-image: url(../images/login-background.png);
+	background-image: url(../images/login-background.jpg);
 	background-repeat:no-repeat;
 
 	-webkit-background-size: auto;
