--- a/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/ext-all.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/ext-all.css
@@ -1,27 +1,20 @@
-/*.cps-headertabs {*/
-/*   background: url("../images/nav-back.png") repeat-x scroll center top #3B404C;*/
-    /*border-bottom: 1px solid black;*/
-    /*height: 39px;*/
-/*    width: 100%;*/
-/*}*/
-
-/*.x-tab-bar {
-    background-color: red;
-}
-
-.x-tab-bar-top .x-tab-bar-body {
-    border-width: 0px 0px 0;
-    height: 20px;
-    padding: 2px 0 3px;
-}*/
-
-
-/*.x-tab-bar {
-    padding: 5px 0 0;
-}
-
-.x-tab-bar-body {
-    padding: 10px 0 0;
-}*/
-
-
+/*
+#--------------------------------
+# Copyright (c) 2011 "Capensis" [http://www.capensis.com]
+#
+# This file is part of Canopsis.
+#
+# Canopsis is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Affero General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# Canopsis is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Affero General Public License for more details.
+#
+# You should have received a copy of the GNU Affero General Public License
+# along with Canopsis.  If not, see <http://www.gnu.org/licenses/>.
+# ---------------------------------
+*/
