icon and traduction for view report in html button

--- a/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
@@ -96,6 +96,9 @@
     background-image: url(../images/icons/application_view_gallery.png) !important; 
 }
 
+.icon-page-html { 
+    background-image: url(../images/icons/page_white_code.png) !important; 
+}
 
 /* state */
 
