Add unknown state

--- a/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/icons.css
@@ -122,6 +122,11 @@
     background-position:center; 
 }
 
+.icon-state-3 { 
+    background-image: url(../images/states/1.png) !important;
+    background-position:center; 
+}
+
 /*  state_type  */
 
 .icon-state-type-0 { 
