--- a/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/row_background.css
+++ b/sources/webcore/var/www/canopsis/themes/canopsis/resources/css/row_background.css
@@ -29,3 +29,8 @@
 .row-background-error {
     background-color: Tomato  !important; 
 }
+
+.row-background-unknown {
+    background-color: WhiteSmoke  !important; 
+}
+
